--- a/style.css
+++ b/style.css
@@ -45,3 +45,18 @@ ul>li{
 h2{
     padding-top: 5%;
 }
+footer{
+    max-width: 800px;
+    height: 100px;
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    text-align: center;
+    height: auto;
+}
+img{
+    height: 121px;
+}
+section{
+    margin-bottom: 1%;
+}
